Make MainActivity implement NotesView and setup the activity for the listView
The methods are implemented according to MVP.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context=".MainActivity">
 
     <ListView
+        android:id="@+id/notes_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
